--- a/ampl-model/pom.xml
+++ b/ampl-model/pom.xml
@@ -11,7 +11,6 @@
     </parent>
     <artifactId>ampl-model</artifactId>
     <name>ampl-model</name>
-    <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -77,8 +76,9 @@
                     <executable>java</executable>
                     <arguments>
                         <argument>-classpath</argument>
-                        <arguments>${maven.classpath}</arguments>
+                        <argument>${maven.classpath}</argument>
                         <argument>org.antlr.Tool</argument>
+                        <!-- argument>-trace</argument -->
                         <argument>-o</argument>
                         <argument>${basedir}/target/generated-sources/antlr3/net/vatov/ampl</argument>
                         <argument>${basedir}/src/main/antlr3/net/vatov/ampl/AmplCombined.g</argument>
@@ -105,68 +105,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> 
-                <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> </descriptorRefs> 
-                <archive> <manifest> <mainClass>net.vatov.ampl.Main</mainClass> </manifest> 
-                </archive> </configuration> <executions> <execution> <id>make-assembly</id> 
-                <phase>package</phase> <goals> <goal>attached</goal> </goals> </execution> 
-                </executions> </plugin -->
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <!--This plugin's configuration is used to store Eclipse 
-                    m2e settings only. It has no influence on the Maven build itself. -->
-                <plugin>
-                    <groupId>org.eclipse.m2e</groupId>
-                    <artifactId>lifecycle-mapping</artifactId>
-                    <version>1.0.0</version>
-                    <configuration>
-                        <lifecycleMappingMetadata>
-                            <pluginExecutions>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>
-                                            org.codehaus.mojo
-                                        </groupId>
-                                        <artifactId>
-                                            exec-maven-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [1.2,)
-                                        </versionRange>
-                                        <goals>
-                                            <goal>exec</goal>
-                                            <goal>java</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore></ignore>
-                                    </action>
-                                </pluginExecution>
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>
-                                            org.apache.maven.plugins
-                                        </groupId>
-                                        <artifactId>
-                                            maven-antrun-plugin
-                                        </artifactId>
-                                        <versionRange>
-                                            [1.7,)
-                                        </versionRange>
-                                        <goals>
-                                            <goal>run</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <ignore></ignore>
-                                    </action>
-                                </pluginExecution>
-                            </pluginExecutions>
-                        </lifecycleMappingMetadata>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 </project>
