--- a/ampl-model/pom.xml
+++ b/ampl-model/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>ampl</artifactId>
         <groupId>net.vatov</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <artifactId>ampl-model</artifactId>
     <name>ampl-model</name>
