--- a/ampl-server/pom.xml
+++ b/ampl-server/pom.xml
@@ -14,15 +14,15 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
+            <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
-            <version>1.6-ea01</version>
+            <version>2.27</version>
         </dependency>
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.1-beta1</version>
+            <version>4.5.6</version>
             <type>jar</type>
             <scope>test</scope>
         </dependency>
